--- a/resources/assets/sass/styles/sidebar.scss
+++ b/resources/assets/sass/styles/sidebar.scss
@@ -57,6 +57,7 @@
 		top: 50%;
 		left: 0;
 		font-size: 24px;
+		cursor: default;
 		transform: translate3d(0, -50%, 0);
 		transition: transform $animation--duration-slow $animation--timing;
 
